data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3752.wast
;; 1. **Test for Out-of-Bounds Index in 'br_table' with Valid Call**:    - This test checks if the implementation correctly traps when the 'br_table' index is out of bounds, even when calling a valid function.    - Muster a 'br_table' instruction with an index greater than the number of available targets followed by a valid 'call' instruction.    - Relating to the edge case, this ensures that the 'br_table' properly handles index bounds before proceeding to the function call.

(assert_invalid
  (module
    (func $f (param i32) (result i32) (i32.const 42))
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref (elem $f))
    (func (result i32)
      (block (br_table 1 (call_indirect (type $sig) (i32.const 0) (i32.const 0))))
    )
  )
  "out of bounds 'br_table' index"
)